feat: add animations

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,15 @@
 ---
-interface Props {
-
-}
+interface Props {}
 ---
+
 <header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
     <div class="mx-auto text-center mb-8 lg:mb-16">
         <h2 class="mb-4 text-5xl tracking-tight font-extrabold">dillig</h2>
-        <p class="font-light sm:text-xl">Te mantenemos en curculación</p>
+        <p class="font-light sm:text-xl">Te mantenemos en circulación</p>
     </div>
-    <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row">
+    <nav
+        class="flex flex-col items-center justify-between w-full text-center md:flex-row"
+    >
         <a href="/" class="text-2xl font-bold">Inicio</a>
         <a href="/services" class="text-2xl font-bold">Servicios</a>
     </nav>
