--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,25 +7,25 @@ console.log(collections);
 ---
 
 <Layout title="Dillig">
-  <ul class="space-y-4">
-    {
-      collections.map((page) => (
-        <li class="bg-gray-100 p-4 rounded-lg shadow-lg">
-          <h2
-            transition:name={`title-${page.id}`}
-            class="text-xl font-bold text-gray-800"
-          >
-            {page.data.title}
-          </h2>
-          <p class="text-gray-600">{page.data.description}</p>
-          <a
-            href={`/${page.id}`}
-            class="text-indigo-500 hover:underline mt-2 block"
-          >
-            Read more
-          </a>
-        </li>
-      ))
-    }
-  </ul>
+    <ul class="space-y-4">
+        {
+            collections.map((page) => (
+                <li class="bg-gray-100 p-4 rounded-lg shadow-lg hover:scale-110 transition">
+                    <h2
+                        transition:name={`title-${page.id}`}
+                        class="text-xl font-bold text-gray-800"
+                    >
+                        {page.data.title}
+                    </h2>
+                    <p class="text-gray-600">{page.data.description}</p>
+                    <a
+                        href={`/${page.id}`}
+                        class="text-indigo-500 hover:underline mt-2 block"
+                    >
+                        Read more
+                    </a>
+                </li>
+            ))
+        }
+    </ul>
 </Layout>
