feat: add onclick

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,10 @@ console.log(collections);
     <ul class="space-y-4">
         {
             collections.map((page) => (
-                <li class="bg-gray-100 p-4 rounded-lg shadow-lg hover:scale-110 transition">
+                <li
+                    class="bg-gray-100 p-4 rounded-lg shadow-lg hover:scale-110 transition cursor-pointer"
+                    onclick={`redirect('${page.id}')`}
+                >
                     <h2
                         transition:name={`title-${page.id}`}
                         class="text-xl font-bold text-gray-800"
@@ -18,14 +21,13 @@ console.log(collections);
                         {page.data.title}
                     </h2>
                     <p class="text-gray-600">{page.data.description}</p>
-                    <a
-                        href={`/${page.id}`}
-                        class="text-indigo-500 hover:underline mt-2 block"
-                    >
-                        Read more
-                    </a>
                 </li>
             ))
         }
     </ul>
 </Layout>
+<script defer>
+    function redirect(id) {
+        window.location.href = `/${id}`;
+    }
+</script>
