feat: add packagecard

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,14 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
+  :root {
+    --primary-color: #1e73be;
+    --primary-color-dark: #165690;
+    --secondary-color: #ff6600;
+    --background-color: #f4f4f4;
+    --text-color: #333;
+  }
+
   html {
     font-family: system-ui, sans-serif;
     background: #13151a;
