--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import { getCollection } from "astro:content";
 
 const collections = await getCollection("pages");
 console.log(collections);
+
+export const prerender = true;
 ---
 
 <Layout title="Dillig">
