--- a/src/pages/[id].astro
+++ b/src/pages/[id].astro
@@ -13,6 +13,8 @@ export async function getStaticPaths() {
 const { page } = Astro.props;
 const { title } = page.data;
 const { Content } = await render(page);
+
+export const prerender = true;
 ---
 
 <Layout title={title}>
